# ExampleMultiRepo

./: .gitignore  README.md
example_project_master/: pyproject.toml
