[project]
name = "example-project-master"
version = "0.1.0"
description = "\"For testing/verification of a bug\""
authors = [
    {name = "Michael Gooch", email = "goochmi@gmail.com"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "\"The Unlicense\""}

[project.optional-dependencies]
dev = [
    "example-project-package0 @ file:///${PROJECT_ROOT}/packages/package0",
    "example-project-package1 @ file:///${PROJECT_ROOT}/packages/package1",
    "example-project-package2 @ file:///${PROJECT_ROOT}/packages/package2",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
